# 42_School

./: README.md
1.1 - FT_PRINTF/: Makefile  ft_printf.c  ft_printf.h  ft_putc.c  ft_putdi.c  ft_putp.c  ft_puts.c  ft_putun.c  ft_putx.c
1.2 - GET_NEXT_LINE/: get_next_line_bonus.c
2.1 - PUSH_SWAP/includes/: push_swap.h
2.1 - PUSH_SWAP/src/: atoi.c  errors.c  init.c  lst_utils.c  main.c  push.c  quick_sort.c  reverse_rotate.c  rotate.c  small_sort.c  split.c  split_utils.c  swap.c  utils.c
2.2 - PIPEX/: Makefile
2.2 - PIPEX/ft_printf/: ft_printf.c  ft_printf.h  ft_putc.c  ft_putdi.c  ft_putp.c  ft_puts.c  ft_putun.c  ft_putx.c
2.2 - PIPEX/includes/: pipex.h
2.2 - PIPEX/src/: errors.c  main.c  pipes.c  process.c  split.c  utils.c
2.2 - PIPEX/tests/: infile  largefile  largefile_with_words  test_commands
2.3 - SO_LONG/: Makefile  so_long
2.3 - SO_LONG/ft_printf/: ft_printf.c  ft_printf.h  ft_putc.c  ft_putdi.c  ft_putp.c  ft_puts.c  ft_putun.c  ft_putx.c
2.3 - SO_LONG/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils1.c  get_next_line_utils2.c
2.3 - SO_LONG/includes/: so_long.h
2.3 - SO_LONG/maps/: cake_block.ber  cake_can_eat.ber  enemy_map.ber  exit_block.ber  (+15 more)
3.1 - PHILOSOPHERS/: Makefile  philo
5.7 - INCEPTION/: Makefile
6.1 - TRANSCENDENCE/: transcendence.js
POST-CC/1.1 - PYTHON_DATA_SCIENCE/Python_0/ex09/: LICENSE  README.md  pyproject.toml
POST-CC/1.1 - PYTHON_DATA_SCIENCE/Python_0/ex09/src/ft_package/: __init__.py
POST-CC/1.1 - PYTHON_DATA_SCIENCE/Python_0/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
(+392 files in other folders)
