[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
  { name = "eagle", email = "eagle@42.fr" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/eagle/ft_package"
